# s3mer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  agents.md  docker-compose-test.yaml  docker-compose.yml  pyproject.toml
config/: settings.example.yaml
docs/: operations.md
scripts/: perf_test.py  replay_dlq.py
src/s3m/: __init__.py  __main__.py  app.py
src/s3m/backends/: client.py  pool.py
src/s3m/common/: errors.py  logging.py  metrics.py  responses.py  streaming.py  xml.py
src/s3m/config/: settings.py
src/s3m/handlers/: buckets.py  internal.py  objects.py
src/s3m/kafka/: broker.py  manager.py  messages.py  publisher.py  subscribers.py
src/s3m/routing/: classifier.py  operations.py
src/s3m/strategies/: __init__.py  base.py  read.py  write.py
src/s3m/worker/: app.py
src/s3mer/: __init__.py  __main__.py  app.py
src/s3mer/backends/: __init__.py  circuit_breaker.py  client.py  memory_backend.py  multisync_strategies.py  pool.py  prober.py  strategies.py  sync_executor.py  types.py  write_factory.py
src/s3mer/common/: error_registry.py  errors.py  logging.py  metrics.py  responses.py  streaming.py  types.py  xml.py
src/s3mer/config/: settings.py
src/s3mer/handlers/: __init__.py  buckets.py  internal.py  objects.py
src/s3mer/kafka/: __init__.py  broker.py  dlq.py  manager.py  message_validation.py  messages.py  publisher.py  replication_executor.py  retry_scheduler.py  subscribers.py  subscribers_config.py
src/s3mer/routing/: __init__.py  classifier.py  dispatcher.py  http_handler.py  operations.py  registry.py
src/s3mer/state/: __init__.py  factory.py  memory.py  protocol.py  valkey_store.py
src/s3mer/strategies/: base.py  read.py  write.py
src/s3mer/worker/: __init__.py  app.py
tests/: conftest.py  e2e_full.py  e2e_test.py
tests/e2e/: e2e_test.py  test_api.py  test_failover.py  test_replication.py
tests/integration/: test_valkey_store.py
tests/unit/: conftest.py  test_circuit_breaker.py  test_classifier.py  test_errors.py  test_handlers_put.py  test_internal_routing.py  test_lifecycle_policy.py  test_logging.py  test_memory_backend.py  test_multisync_body_buffer.py  test_pool.py  test_replication_manager.py  test_settings.py  test_state_memory.py  test_strategies.py  test_streaming.py  test_subscribers.py  test_tracing.py
