[project]
name = "s3m"
version = "0.1.0"
description = "S3 Multi-Backend Proxy Service"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.34",
    "aiobotocore>=2.21",
    "faststream[kafka]>=0.5",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "pyyaml>=6.0",
    "structlog>=25.1",
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "boto3>=1.38",          # for integration tests (sync client)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3m"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "BLE001", "COM812", "D", "EM102", "TC001", "TRY003", "PLR0911", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT001", "FBT002"]
"tests/e2e_test.py" = ["T201", "S105", "S310", "PLR2004", "ANN", "TRY300"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
