[project]
name = "s3m"
version = "0.1.0"
description = "S3 Multi-Backend Proxy Service"
requires-python = ">=3.12"

dependencies = [
    "uvicorn[standard]>=0.34",
    "aiobotocore>=2.21",
    "faststream[kafka]>=0.5",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "pyyaml>=6.0",
    "structlog>=25.1",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.35",
    "boto3>=1.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3m"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "BLE001", "COM812", "C901", "D", "EM102", "FBT", "TC001", "TRY003", "PLR0911", "PLR0913", "S314"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "FBT001", "FBT002"]
"tests/e2e_test.py" = ["T201", "S105", "S310", "PLR2004", "ANN", "TRY300"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
