[project]
name = "s3mer"
version = "0.1.0"
description = "S3 Multi-backend Event-driven Replicator"
requires-python = ">=3.12"

dependencies = [
    "uvicorn[standard]>=0.34",
    "aiobotocore>=2.21",
    "faststream[kafka]>=0.5",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "pyyaml>=6.0",
    "structlog>=25.1",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
    "ty>=0.0.35",
    "boto3>=1.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3mer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests",
    "e2e: End-to-end tests requiring a running proxy and backends",
]
filterwarnings = [
    "ignore::DeprecationWarning:aiobotocore.*",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "BLE001", "COM812", "C901", "D", "EM", "FBT", "TRY003", "PLR0911", "PLR0913", "S314"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]
"tests/e2e/*.py" = ["S310"]
"scripts/**/*.py" = ["T201", "S311", "E501", "PLR2004", "PLR0915", "PLR0912", "EXE001"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
